# mergeJsonRequest

./: README.md  mergeJsonRequest.cabal  stack.yaml
app/: Main.hs
src/: GraphQL.hs
